fix(overlay): vertical overflow in compile error container

--- a/packages/dev-overlay/src/components/CompileError.scss
+++ b/packages/dev-overlay/src/components/CompileError.scss
@@ -107,6 +107,10 @@
                 color: var(--text-dim);
             }
 
+            &.rule-id {
+                white-space: pre;
+            }
+
             &.loc-line {
                 text-align: right;
                 padding-right: 0.2em;
