--- a/packages/dev-overlay/src/containers/CompileErrorContainer.scss
+++ b/packages/dev-overlay/src/containers/CompileErrorContainer.scss
@@ -2,7 +2,6 @@
 
 .compile-errors {
     @include flex(column);
-    overflow: auto;
     min-width: 50%;
     max-width: 100%;
 
@@ -12,5 +11,9 @@
         font-weight: bold;
         text-align: center;
         color: var(--red);
+    }
+
+    > .error-container {
+        overflow: auto;
     }
 }
