--- a/packages/dev-overlay/src/containers/CompileWarningContainer.scss
+++ b/packages/dev-overlay/src/containers/CompileWarningContainer.scss
@@ -2,7 +2,6 @@
 
 .compile-warnings {
     @include flex(column);
-    overflow: auto;
     min-width: 50%;
     max-width: 100%;
     position: relative;
@@ -13,6 +12,10 @@
         font-weight: bold;
         text-align: center;
         color: var(--yellow);
+    }
+
+    > .error-container {
+        overflow: auto;
     }
 }
 
